resolved layout issue in signup Page

--- a/src/flashCard-app/components/Form/Form.css
+++ b/src/flashCard-app/components/Form/Form.css
@@ -1,6 +1,6 @@
 .form_container {
   width: 40%;
-  height: 85vh;
+  height: 100vh;
   margin: 20px auto 10px;
 }
 
